[gd_scene load_steps=50 format=2]

[ext_resource path="res://Enemies/Skeleton/Skeleton.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Skeleton/SkeletonSpawning.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Skeleton/Skeleton.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Skeleton/Bow.png" type="Texture" id=4]
[ext_resource path="res://Enemies/Skeleton/SpawnSprite.gd" type="Script" id=5]
[ext_resource path="res://Enemies/Bat/TargetDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Hitboxes/Hurtbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/Skeleton/FiringZone.tscn" type="PackedScene" id=8]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Spawn",
"speed": 10.0
} ]

[sub_resource type="Animation" id=14]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/BowSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ null ],
"method": "spawn_arrow"
} ]
}

[sub_resource type="CapsuleShape2D" id=15]
radius = 9.69196
height = 8.63473

[sub_resource type="CapsuleShape2D" id=16]
radius = 5.1328
height = 3.21912

[sub_resource type="CircleShape2D" id=17]
radius = 88.0216

[sub_resource type="CircleShape2D" id=18]
radius = 72.3941

[sub_resource type="Animation" id=19]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/BowSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, -7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/BowSprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ) ]
}

[sub_resource type="Animation" id=20]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/BowSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -5, -14 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/BowSprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ) ]
}

[sub_resource type="Animation" id=21]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/BowSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, -9 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/BowSprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ) ]
}

[sub_resource type="Animation" id=22]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/BowSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4, -12 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/BowSprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ) ]
}

[sub_resource type="Animation" id=23]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/BowSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, -7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/BowSprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ) ]
}

[sub_resource type="Animation" id=24]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/BowSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -5, -14 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/BowSprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ) ]
}

[sub_resource type="Animation" id=25]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/BowSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, -9 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/BowSprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ) ]
}

[sub_resource type="Animation" id=26]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23, 18 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/BowSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4, -12 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/BowSprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=31]
blend_point_0/node = SubResource( 27 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 28 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 29 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 30 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "RunDown"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "RunUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=36]
blend_point_0/node = SubResource( 32 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 33 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 34 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 35 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachine" id=39]
states/Idle/node = SubResource( 31 )
states/Idle/position = Vector2( 356, 60 )
states/Run/node = SubResource( 36 )
states/Run/position = Vector2( 560, 60 )
transitions = [ "Idle", "Run", SubResource( 37 ), "Run", "Idle", SubResource( 38 ) ]
start_node = "Idle"
graph_offset = Vector2( -41, -43 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=40]

[node name="Skeleton" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 17
script = ExtResource( 1 )
MAX_SPEED = 50
spritePath = NodePath("YSort/Sprite")
bowSpritePath = NodePath("YSort/BowSprite")

[node name="YSort" type="YSort" parent="."]

[node name="SpawnSprite" type="AnimatedSprite" parent="YSort"]
position = Vector2( 0, -10 )
frames = SubResource( 13 )
animation = "Spawn"
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="YSort"]
position = Vector2( 0, -10 )
texture = ExtResource( 3 )
vframes = 5
hframes = 5
frame = 15

[node name="BowSprite" type="Sprite" parent="YSort"]
position = Vector2( -5, -14 )
rotation = 3.14159
z_as_relative = false
texture = ExtResource( 4 )
offset = Vector2( 0, -3 )
vframes = 2
hframes = 2
frame = 1

[node name="BowAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Firing = SubResource( 14 )

[node name="Hurtbox" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, -9.64605 )
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 1.29783 )
shape = SubResource( 15 )

[node name="Stats" parent="." instance=ExtResource( 9 )]
max_health = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.117989, 0.146656 )
rotation = 1.5708
shape = SubResource( 16 )

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="StateTimer" type="Timer" parent="."]

[node name="DetectionZone" parent="." instance=ExtResource( 6 )]
visible = false

[node name="CollisionShape2D" parent="DetectionZone" index="0"]
position = Vector2( 0, -5.12267 )
shape = SubResource( 17 )

[node name="FiringZone" parent="." instance=ExtResource( 8 )]
visible = false

[node name="CollisionShape2D" parent="FiringZone" index="0"]
position = Vector2( 0, -5 )
shape = SubResource( 18 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IdleDown = SubResource( 19 )
anims/IdleLeft = SubResource( 20 )
anims/IdleRight = SubResource( 21 )
anims/IdleUp = SubResource( 22 )
anims/RunDown = SubResource( 23 )
anims/RunLeft = SubResource( 24 )
anims/RunRight = SubResource( 25 )
anims/RunUp = SubResource( 26 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 39 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 40 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Run/blend_position = Vector2( 0, 0 )
[connection signal="animation_finished" from="YSort/SpawnSprite" to="YSort/SpawnSprite" method="_on_SpawnSprite_animation_finished"]
[connection signal="animation_finished" from="YSort/SpawnSprite" to="." method="_on_SpawnSprite_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]

[editable path="Hurtbox"]

[editable path="DetectionZone"]

[editable path="FiringZone"]
